Re-worked the homepage, stories page, features page, and pricing page. Added final banner to the stories page. Ensured all elements are responsive. Fixed images creating whitespaces affecting other elements on page.

--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,14 @@
 }
 /* End of SVG Footer Social Icon Hover Gradients  */
 
+.title_leading {
+  line-height: 6rem;
+}
+
+.padding_hazy {
+  padding-top: 66%;
+}
+
 @media (min-width: 1024px) {
   .borderCard {
     box-shadow: 0 0px 0px 0px #bc7198;
